language/move-lang/tests/move_check/typing/unary_neg_invalid.exp
error: 

   ┌── tests/move_check/typing/unary_neg_invalid.move:7:10 ───
   │
 7 │         -&0;
   │          ^^ Invalid argument to '-'
   ·
 7 │         -&0;
   │          -- Found: '&u64'. But the operation is not yet supported on any type
   │

error: 

   ┌── tests/move_check/typing/unary_neg_invalid.move:8:10 ───
   │
 8 │         -&1;
   │          ^^ Invalid argument to '-'
   ·
 8 │         -&1;
   │          -- Found: '&u64'. But the operation is not yet supported on any type
   │

error: 

   ┌── tests/move_check/typing/unary_neg_invalid.move:9:10 ───
   │
 9 │         -true;
   │          ^^^^ Invalid argument to '-'
   ·
 9 │         -true;
   │          ---- Found: 'bool'. But the operation is not yet supported on any type
   │

error: 

    ┌── tests/move_check/typing/unary_neg_invalid.move:10:10 ───
    │
 10 │         -false;
    │          ^^^^^ Invalid argument to '-'
    ·
 10 │         -false;
    │          ----- Found: 'bool'. But the operation is not yet supported on any type
    │

error: 

    ┌── tests/move_check/typing/unary_neg_invalid.move:6:20 ───
    │
 11 │         -r;
    │          ^ Invalid argument to '-'
    ·
 6 │     t0(x: bool, r: R) {
    │                    - Found: '0x8675309::M::R'. But the operation is not yet supported on any type
    │

error: 

    ┌── tests/move_check/typing/unary_neg_invalid.move:6:20 ───
    │
 12 │         -r;
    │          ^ Invalid argument to '-'
    ·
 6 │     t0(x: bool, r: R) {
    │                    - Found: '0x8675309::M::R'. But the operation is not yet supported on any type
    │

error: 

    ┌── tests/move_check/typing/unary_neg_invalid.move:13:10 ───
    │
 13 │         -(0, false);
    │          ^^^^^^^^^^ Invalid argument to '-'
    ·
 13 │         -(0, false);
    │          ---------- Found: '(u64,bool)'. But the operation is not yet supported on any type
    │

error: 

    ┌── tests/move_check/typing/unary_neg_invalid.move:14:10 ───
    │
 14 │         -();
    │          ^^ Invalid argument to '-'
    ·
 14 │         -();
    │          -- Found: '()'. But the operation is not yet supported on any type
    │

