language/move-lang/tests/move_check/typing/unary_neg_invalid.move
module M {
    resource struct R {
        f: bool
    }

    fun t0(x: bool, r: R) {
        -&0;
        -&1;
        -true;
        -false;
        -r;
        -r;
        -(0, false);
        -();
    }
}
